--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Site Github</title>
   </head>
   <body>
-    <div class="countainer">
+    <div class="container">
         <div class="row">
             <div class="col-12">
                 <h1>Teste Bootstrap</h1>
